# travel-package

./: .gitignore  README.md  SUMMARY.md  main.py  make_figures.py  pyproject.toml  regen_fig2.py  run_experiments_tuned.py
notebooks/: 01_eda.ipynb  02_modeling.ipynb
saved_models/lgbm/: lgb_fold_0.pkl  lgb_fold_1.pkl  lgb_fold_2.pkl  lgb_fold_3.pkl  lgb_fold_4.pkl
src/features/: advanced_features.py  basic_features.py  categorical_features.py
src/models/: cat_trainer.py  ensemble.py  lgb_trainer.py  xgb_trainer.py
src/preprocessing/: cleaning.py  imputation.py
src/utils/: memory.py  visualization.py
