[project]
name = "travel-package-conversion-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.18.4",
    "appnope==0.1.4",
    "asttokens==3.0.1",
    "catboost==1.2.10",
    "cloudpickle==3.1.2",
    "cmake==3.31.10",
    "colorlog==6.10.1",
    "comm==0.2.3",
    "confusable-homoglyphs==3.3.1",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "fonttools==4.62.1",
    "graphviz==0.21",
    "ipykernel==7.2.0",
    "ipython==8.39.0",
    "jedi==0.19.2",
    "joblib==1.5.3",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kiwisolver==1.5.0",
    "lightgbm==4.6.0",
    "llvmlite==0.47.0",
    "mako==1.3.12",
    "markupsafe==3.0.3",
    "matplotlib==3.10.9",
    "matplotlib-inline==0.2.1",
    "narwhals==2.20.0",
    "nest-asyncio==1.6.0",
    "numba==0.65.1",
    "numpy==2.2.6",
    "opencv-stubs==0.1.3",
    "optuna==4.8.0",
    "packaging==26.2",
    "pandas==2.3.3",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pillow==12.2.0",
    "platformdirs==4.9.6",
    "plotly==6.7.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "shap==0.49.1",
    "six==1.17.0",
    "slicer==0.0.8",
    "sqlalchemy==2.0.49",
    "stack-data==0.6.3",
    "threadpoolctl==3.6.0",
    "tomli==2.4.1",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2026.2",
    "unidecode==1.4.0",
    "wcwidth==0.6.0",
    "xgboost==3.2.0",
]
